# model123d

./: ocp-cad-viewer-2.8.1.vsix  ocp_vscode-2.8.1-py3-none-any.whl  pyproject.toml
print/: base_plate_Hexagonal_32.0.3mf  field_plate_Hexagonal_42.0.3mf  root_supported.3mf  root_test_angle.3mf
print/_done/: owl_hunter.3mf
src/: cmf_phone_belta_0.03.3mf
src/material123d/: drop_simulation.py  field_lines.py  wood_grain.py
src/model123d/: base_65.0.stl  base_75.0.stl  base_hexagon_45.0.stl  base_plate_Hexagonal_32.0_2.5_10.0.stl  base_plate_Hexagonal_32.0_3.0_12.0.stl  base_plate_Hexagonal_36.950417228136054_1.5_10.0.stl  base_plate_Hexagonal_42.0_1.5_10.0.stl  base_plate_{identifier}_{size}_{parameters}.py  base_round_25.0.stl  base_{identifier}.py  frame_hanger_12.5x5.0mm_12.5x5.0x2.5mm.stl  frame_hanger_12.5x5.0mm_15.75x5.0x2.5mm.3mf  frame_hanger_12.5x5.0mm_15.75x5.0x2.5mm.stl  frame_hanger_12.5x5.0mm_7.5x5.0x2.5mm.stl  frame_hanger_12.5x5.0mm_9.5x5.0x2.5mm.stl  frame_hanger_{identifier}.py  pan_circle.3mf  pan_round_76.0.stl  pan_round_80.0.stl  pan_round_{identifier}.py  recorder_23-0_76-5_12-0.stl  recorder_full.stl  recorder_pebble.3mf  recorder_pebble.stl  recorder_sleeve_cut.stl  recorder_{identifier}.py  roof_{identifier}_{size}_{parameters}.py
src/model123d/base_plate/: README.md  base_plate_Circular_42.0_1.5_10.0.stl  base_plate_Circular_42.0_2.5_10.0.stl  base_plate_Circular_42.0_4.5_10.0.stl  base_plate_Hexagonal_32.0_.stl  base_plate_Hexagonal_32.0_2.5_12.0.stl  base_plate_Hexagonal_42.0_4.5_10.0.stl  base_plate_{identifier}_{size}_{parameters}.py  (+1 more)
(+67 files in other folders)
