[project]
name = "model123d"
version = "0.1.0"
description = ""
authors = [
    {name = "Andreas **Felix** Häberle",email = "felix@42sol.eu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "build123d (>=0.9.1,<0.10.0)",
    "ocp-vscode (>=2.7.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "model123d", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
